--- a/home.html
+++ b/home.html
@@ -4,7 +4,7 @@
 		<title>Home</title>
 	</head>
 	<body>
-		<p>Home page</p>
+		<p>Home page, welcom</p>
 		<a href="about.html">About</a>
 		<a href="profile.html">Profile</a>
 
